--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,21 @@ Package: statZHmatomo
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Lars",
+           family = "Schöbitz",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "lars@lse.de",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+Imports: 
+  jsonlite, 
+  xml2,
+  utils
+Depends: R (>= 4.0.0)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
+URL: https://github.com/statistikZH/statZHmatomo
+BugReports: https://github.com/statistikZH/statZHmatomo/issues
