--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 URL: https://github.com/statistikZH/statZHmatomo
 BugReports: https://github.com/statistikZH/statZHmatomo/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
