--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "christian.ruiz@statistik.ji.zh.ch"),
     person(given = "Lars",
            family = "Schöbitz",
-           role = c("aut", "cre"),
+           role = c("aut"),
            email = "lars.schoebitz@statistik.ji.zh.ch",
            comment = c(ORCID = "0000-0003-2196-5015")))
 Description: The package connects allows the user to connect to one of three 
