--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R:
            role = c("aut"),
            email = "lars.schoebitz@statistik.ji.zh.ch",
            comment = c(ORCID = "0000-0003-2196-5015")))
-Description: The package connects allows the user to connect to one of three 
+Description: The package allows the users to connect to one of three 
     Matomo Web Analytics server and to dynamically query the Reporting API.
 License: MIT + file LICENSE
 Imports: 
