--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
-          install.packages(c("pkgdown", "dplyr", "tidyr", "magrittr"), type = "binary")
+          install.packages(c("pkgdown", "dplyr", "tidyr", "magrittr", "janitor", "DT", "knitr"), type = "binary")
         shell: Rscript {0}
 
       - name: Install package
